Routes now include get routes
